# VideoCaptionerR

./: .gitignore  Cargo.toml  README.md
apps/desktop/: index.html  package.json  pnpm-lock.yaml
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: desktop.ts
crates/asr/: Cargo.toml
crates/asr/src/: application.rs  descriptor.rs  engine.rs  lib.rs  model.rs  normalize.rs  options.rs  python_env.rs  resolver.rs  tests_phase5.rs  worker.rs
crates/asr/src/worker/: client.rs  control.rs  mod.rs  process.rs  protocol_session.rs
crates/asr/src/worker/tests/: mod.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: batch_control.rs  capability.rs  config.rs  doctor.rs  dto.rs  import_subtitle.rs  jobs.rs  lib.rs  models.rs  processing.rs  recovery.rs  run_control.rs  runtime.rs  transcript.rs  wiring.rs
crates/bootstrap/src/tests/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: artifact.rs  error.rs  event.rs  ids.rs  lib.rs  media.rs  protocol.rs  transcript.rs  version.rs
crates/core/: Cargo.toml
crates/core/src/: application_error.rs  chunking.rs  constants.rs  execution_snapshot.rs  lib.rs  pipeline.rs  text_joiner.rs  vad.rs
crates/core/src/artifacts/: media.rs  mod.rs
crates/core/src/ports/: artifact.rs  asr.rs  cache.rs  events.rs  llm.rs  media.rs  mod.rs  model.rs  processing.rs  repositories.rs  run_control.rs  subtitle.rs  system.rs
crates/core/src/split/: mod.rs  rule.rs
crates/core/src/subtitle/: export.rs  preflight.rs  time.rs
crates/core/src/use_cases/: cancel_job.rs  cancellation_watcher.rs  chunk_plan.rs  import_subtitle.rs  job_ops.rs  llm_pipeline.rs  maintenance.rs  mod.rs  process_media_files.rs  resume_batch.rs  retry_job.rs  run_batch.rs  startup_recovery.rs  transcribe_job.rs  transcript_editor.rs
crates/core/src/use_cases/llm_pipeline/: agent.rs  correct.rs  durable.rs  execute.rs  mod.rs  packing.rs  plan.rs  retry.rs  service.rs  split.rs  translate.rs  types.rs  validation.rs
crates/core/src/use_cases/llm_pipeline/tests/: mod.rs
crates/core/src/use_cases/transcribe_job/: asr.rs  command.rs  commit.rs  long_audio.rs  mod.rs  service.rs
crates/core/src/use_cases/transcribe_job/tests/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  identity.rs  lib.rs
crates/domain/src/subtitle/: constants.rs  mod.rs  split.rs  text_joiner.rs  transcript.rs
crates/domain/src/workflow/: batch.rs  event.rs  job.rs  mod.rs  stage.rs  work_unit.rs
crates/domain/src/workflow/tests/: mod.rs
crates/llm/: Cargo.toml
crates/llm/src/: application.rs  circuit.rs  json_parse.rs  lib.rs  openai.rs  probe.rs  prompt.rs  provider.rs  templates.rs  token.rs
crates/platform/: Cargo.toml
crates/platform/src/: config.rs  constants.rs  instance_lock.rs  lib.rs  llm_log.rs  media_gateway.rs  paths.rs  processing.rs  subtitle_gateway.rs  vad_silero.rs
crates/platform/src/media/: extract.rs  hash.rs  mod.rs  probe.rs
crates/platform/src/subtitle_io/: import.rs  mod.rs  planner.rs
crates/store/: Cargo.toml
crates/store/src/: artifact.rs  cache.rs  lib.rs  migrate.rs  repository.rs  store.rs
crates/store/src/actor/: command.rs  handle.rs  mod.rs
crates/store/src/repository/: artifact.rs  batch.rs  batch_creation.rs  capability_probe.rs  job.rs  mod.rs  outbox.rs  recovery.rs  snapshot.rs  stage_commit.rs  status.rs  work_unit.rs
crates/store/src/repository/tests/: mod.rs
crates/store/src/sqlite/: artifacts.rs  batch_creation.rs  batches.rs  capability_probes.rs  jobs.rs  mapping.rs  mod.rs  outbox.rs  recovery.rs  snapshots.rs  stage_commit.rs  work_units.rs
crates/store/src/sqlite/tests/: mod.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: fake_asr.rs  fake_llm.rs  fixtures.rs  lib.rs
crates/whisper-helper/: Cargo.toml  build.rs
crates/whisper-helper/src/: audio.rs  fake_engine.rs  main.rs  protocol.rs  session.rs  whisper_cpp_engine.rs  whisper_shim.c
docs/: implementation-decisions-all.md  implementation-decisions-all_DDD_FINAL.md  pr2-crash-point-matrix.md  release-checklist-m8.md  silero-vad.md
docs/adr/: 0001-rust-core-business-logic.md  0002-immutable-word-timeline.md  0003-stdio-ndjson-protocol.md  0004-whisper-cpp-helper.md  0005-json-artifacts-sqlite-control.md  0006-a2-minimum-asr-capability.md  0007-one-active-transcription.md  0008-atomic-commit-and-leases.md  0009-chunk-core-read-ownership.md  0010-llm-structured-output-validation.md  0011-provider-capability-detection.md  0012-translation-wavefront.md  0013-field-level-user-protection.md  0014-immutable-profile-revisions.md  0015-editable-prompt-snapshots.md  0016-runtime-family-isolation.md  0017-model-manifests-and-digests.md  0018-plaintext-api-keys.md  0019-fifo-single-model-batch.md  0020-batch-terminal-model-unload.md  0021-exclusive-gui-cli-instance.md  0022-no-early-ci-no-wer.md  0023-pragmatic-ddd-bounded-contexts.md  0024-domain-application-dependency-inversion.md  0025-application-owned-ports.md  0026-workflow-aggregate-boundaries.md  0027-shared-bootstrap-composition-root.md  0028-inbound-adapter-boundary.md
migrations/: 0001_init.sql
prompts/correct/: system.txt
prompts/split/: system.txt
prompts/translate/: system.txt
python/runtimes/: worker_common.py
python/runtimes/faster-whisper/: requirements.txt  worker.py
python/runtimes/mlx-whisper/: requirements.txt
schemas/: error_codes.json  meta.json  protocol_envelope.schema.json  transcript.schema.json
schemas/python/: constants.py
schemas/ts/: error_codes.ts
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
