[workspace]
resolver = "2"
members = [
    "crates/contracts",
    "crates/core",
    "crates/asr",
    "crates/llm",
    "crates/store",
    "crates/cli",
    "crates/test-support",
    "crates/whisper-helper",
    "tools/xtask",
]
default-members = [
    "crates/contracts",
    "crates/core",
    "crates/asr",
    "crates/llm",
    "crates/store",
    "crates/cli",
    "crates/test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/starfield17/VideoCaptionerR"
authors = ["VideoCaptionerR contributors"]
rust-version = "1.85"

[workspace.dependencies]
videocaptionerr-contracts = { path = "crates/contracts" }
videocaptionerr-core = { path = "crates/core" }
videocaptionerr-asr = { path = "crates/asr" }
videocaptionerr-llm = { path = "crates/llm" }
videocaptionerr-store = { path = "crates/store" }
videocaptionerr-test-support = { path = "crates/test-support" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
ulid = { version = "1", features = ["serde"] }
blake3 = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
regex = "1"
unicode-normalization = "0.1"
dirs = "6"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
proptest = "1"
pretty_assertions = "1"
