[package]
name = "videocaptionerr-asr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "ASR traits, worker clients, and adapters for VideoCaptionerR"

[dependencies]
videocaptionerr-domain = { workspace = true }
videocaptionerr-core = { workspace = true }
videocaptionerr-contracts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }
