[package]
name = "videocaptionerr-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Composition root and shared application facade for VideoCaptionerR"

[dependencies]
videocaptionerr-domain = { workspace = true }
videocaptionerr-contracts = { workspace = true }
videocaptionerr-core = { workspace = true }
videocaptionerr-platform = { workspace = true }
videocaptionerr-asr = { workspace = true }
videocaptionerr-llm = { workspace = true }
videocaptionerr-store = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
