[package]
name = "videocaptionerr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CLI adapter for VideoCaptionerR"
default-run = "videocaptionerr"

[[bin]]
name = "videocaptionerr"
path = "src/main.rs"

[dependencies]
videocaptionerr-contracts = { workspace = true }
videocaptionerr-core = { workspace = true }
videocaptionerr-store = { workspace = true }
videocaptionerr-asr = { workspace = true }
videocaptionerr-llm = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
