[package]
name = "videocaptionerr-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pure domain model and policies for VideoCaptionerR"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
