[package]
name = "videocaptionerr-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "LLM provider client, capability probe, and agent loop for VideoCaptionerR"

[dependencies]
videocaptionerr-contracts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
reqwest = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }
