[package]
name = "videocaptionerr-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SQLite store actor, migrations, and atomic artifacts for VideoCaptionerR"

[dependencies]
videocaptionerr-domain = { workspace = true }
videocaptionerr-core = { workspace = true }
videocaptionerr-contracts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
