[package]
name = "videocaptionerr-whisper-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Isolated Rust whisper.cpp / fake ASR helper process"
publish = false

[[bin]]
name = "videocaptionerr-whisper-helper"
path = "src/main.rs"

[dependencies]
videocaptionerr-contracts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
hound = "3.5"
